tests/functional/lang/eval-fail-set.err.exp
error: undefined variable 'x'
       at /pwd/lang/eval-fail-set.nix:1:4:
            1| 8. x
             |    ^
            2|
